fix: add trailing slash to local-dir in deploy workflow
Ensures proper directory path handling for FTP deployment in the GitHub Actions workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -79,7 +79,7 @@ jobs:
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
           security: loose
-          local-dir: dist
+          local-dir: dist/
           exclude: |
             **/.git/**
             **/.github/**
